@@ -40,6 +40,7 @@ PHP                                                                        NEWS
   Closure and SplFileInfo using exceptions). (Etienne)
 - Fixed bug #46268 (DateTime::modify() does not reset relative time values).
   (Derick)
+- Fixed bug #46044 (Mysqli - wrong error message). (Johannes)
 - Fixed bug #45991 (Ini files with the UTF-8 BOM are treated as invalid).
   (Scott)
 - Fixed bug #45989 (json_decode() doesn't return NULL on certain invalid
